# SMCEBI-TLM

./: .gitignore  LICENSE  README.md
Wstęp_do_informatyki/Zastępstwo_6-7.12.22/: README.md  a.out  example.c  morse.c
Wstęp_do_informatyki/c_2k22/: README.md
Wstęp_do_informatyki/c_2k22/pico/: CMakeLists.txt  led.c  morse.c
Zaawansowane_metody_fizyki_jądrowej_w_medycynie_nuklearnej_i_radioterapii_onkologicznej/: README.md
Środowiska_i_narzędzia_wytwarzania_oprogramowania/: README.md  git.md  make.md  shell.md  tematy_projektów.md
Środowiska_i_narzędzia_wytwarzania_oprogramowania/Zajęcia_1/: README.md
Środowiska_i_narzędzia_wytwarzania_oprogramowania/Zajęcia_10/: README.md
Środowiska_i_narzędzia_wytwarzania_oprogramowania/Zajęcia_2/: README.md
Środowiska_i_narzędzia_wytwarzania_oprogramowania/Zajęcia_2i3/: README.md  README.md.bak
Środowiska_i_narzędzia_wytwarzania_oprogramowania/Zajęcia_4/: README.md  runme
Środowiska_i_narzędzia_wytwarzania_oprogramowania/Zajęcia_5/: README.md
Środowiska_i_narzędzia_wytwarzania_oprogramowania/Zajęcia_6/: README.md  docker-compose.yml
Środowiska_i_narzędzia_wytwarzania_oprogramowania/Zajęcia_7/: Dockerfile  README.md
Środowiska_i_narzędzia_wytwarzania_oprogramowania/make/: CMakeLists.txt  Makefile
Środowiska_i_narzędzia_wytwarzania_oprogramowania/make/example1/include/: test.hpp
Środowiska_i_narzędzia_wytwarzania_oprogramowania/make/example1/src/: test.cpp
Środowiska_i_narzędzia_wytwarzania_oprogramowania/make/example3/src/: main.cpp
Środowiska_i_narzędzia_wytwarzania_oprogramowania/make/src/: main.cpp
(+48 files in other folders)
